<resources>
    <string name="app_name">NavigationPOC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_school_1">School 1</string>
    <string name="menu_school_2">School 2</string>
    <string name="menu_school_3">School 3</string>
    <string name="menu_school_4">School 4</string>
    <string name="detail">Details</string>
    <string name="btn_detail">Show Detail</string>
    <string name="label_java">Java</string>
    <string name="label_kotlin">Kotlin</string>
</resources>
