<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

        <item
            android:id="@+id/nav_school_1"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_school_1" />
        <item
            android:id="@+id/nav_school_2"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_school_2" />
        <item
            android:id="@+id/nav_school_3"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_school_3" />
        <item
            android:id="@+id/nav_school_4"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_school_4" />


</menu>
