<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.appzgarden.navigationpoc.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/home_to_detail"
            app:destination="@id/detail_fragment">
            <argument
                android:name="selected_option"
                android:defaultValue="home"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.appzgarden.navigationpoc.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery">
        <action
            android:id="@+id/gallery_to_detail"
            app:destination="@id/detail_fragment">
            <argument
                android:name="selected_option"
                android:defaultValue="home"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.appzgarden.navigationpoc.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow">
        <action
            android:id="@+id/slideshow_to_detail"
            app:destination="@id/detail_fragment">
            <argument
                android:name="selected_option"
                android:defaultValue="home"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/detail_fragment"
        android:name="com.appzgarden.navigationpoc.ui.detail.DetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/fragment_detail" />

</navigation>